# smaet-smoke-and-gas-detector

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  htmldata.c  lwipopts.h  main.c  main.h  ssi.h
html_files/: index.shtml
